# dv-eval-harness

./: .gitignore  CODEX.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
backend/: DPO_logic.py  DPO_pref_pair_gen.py  pyproject.toml  smoke_test.py  smoke_test_results.json
backend/app/: agent_runner.py  evaluator.py  main.py  schemas.py  simulators.py  storage.py  tools.py
backend/app/api/v1/: eval.py
backend/app/schemas/: design_patterns.py  dpo.py  hardware.py
backend/app/services/: agent_runner.py  evaluator.py  metrics.py  safety.py  simulators.py  workspace_audit.py
backend/data/blueprints/: axi_lite_master.json  fifo_buffers.json  fsm_controllers.json  round_robin.json
backend/db/: eval_runs.sql
backend/mock_cases/: axi_handshake_bug.json  fsm_stuck_bug.json  uart_overflow_bug.json
backend/scripts/: generate_cases.py
backend/tests/: test_agent_runner.py  test_evaluator.py  test_metrics.py  test_safety.py  test_schemas.py  test_storage.py  test_workspace_audit.py
backend/traces/: eval_runs.jsonl
